[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posLD"
version = "0.1.0"
description = "Compute Moving-Average Type-Token Ratio (MATTR) across POS-based token categories for corpus linguistics research."
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "Taehyeong (Terry) Kim", email = "tk654@nau.edu" }
]
requires-python = ">=3.8"
dependencies = [
    "spacy>=3.0",
    "pandas>=1.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/taehyeongterrykim/posLD"
PyPI = "https://pypi.org/project/posLD/"

[project.scripts]
posLD = "posLD.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["posLD*"]
